--- a/content/post/its-350-wk01_04_2017.md
+++ b/content/post/its-350-wk01_04_2017.md
@@ -1,8 +1,10 @@
 ---
 title: "Its 350 Wk01_04_2017"
 date: 2017-04-01T00:00:00-04:00
-draft: true
+draft: false
 ---
+![Go!](/images/spot-runs-start-la.jpg)
+
 ## ITS 350 Week One
 
 *This post is intended for students in my ITS 350 Introduction to Computer Security course at Colorado State University. The majority of information related to the course is available within the course online, but I try to provide additional material like this week in order to bring my own experiences / web surfings / questions about the subject out into the open without diluting what the school has prepared in terms of course materials. In other words, I'm trying not to muck up the course shell.*
@@ -19,4 +21,11 @@ For some people information security is just another part of their job. It shoul
 
 * You may not, in fact, know what you think you know. Generally speaking any college class should challenge your assumptions at least a little bit.
 * It helps to clarify the language so you can speak about security intelligently AND HELPFULLY with others. Security is a tough and tense subject for some, and it is immensely harder when not everyone is using the same language. And language matters.
-* 
+* The content of this course specifically covers material that industry-wide topics that security professionals must master. It uses Testout as a training tool to engage students in detailed material related to this subject.
+
+### why am I teaching this course?
+
+Over the years I have worked in a wide range of IT-related roles, including multimedia design, desktop support, printer monkey, system administrator, manager, and now developer. I find that security is a subject that every field would benefit having a stronger understanding of (that's a really awkward sentence, but you get it, right?) We need this, and when I chose to pursue a second Master's degree I concentrated my studies on the Information Security and Assurance field so that I could expand my own understanding of not only industry best practices, but also the direction that research is going.
+
+So I like this subject, and I like sharing it with my friends in the IT field. We're all trying to make technology into a useful, not scary thing for our co-workers / customers / clients / bosses, and knowing this stuff well helps to do that.
+
